--- a/service-oa/src/main/resources/application-dev.yml
+++ b/service-oa/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/pycro-oa?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
+        url: jdbc:mysql://localhost:3306/pycro-oa?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8&allowPublicKeyRetrieval=true
         username: root
         password: 12345678
     jackson:
