--- a/service-oa/pom.xml
+++ b/service-oa/pom.xml
@@ -23,6 +23,7 @@
             <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>pycro.usts</groupId>
             <artifactId>service-util</artifactId>
@@ -45,6 +46,12 @@
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-engine-core</artifactId>
             <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>pycro.usts</groupId>
+            <artifactId>spring-security</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
