--- a/service-oa/pom.xml
+++ b/service-oa/pom.xml
@@ -91,6 +91,7 @@
                     <include>**/*.yml</include>
                     <include>**/*.properties</include>
                     <include>**/*.xml</include>
+                    <include>**/*.png</include>
                 </includes>
                 <filtering>false</filtering>
             </resource>
