--- a/service-oa/pom.xml
+++ b/service-oa/pom.xml
@@ -53,6 +53,7 @@
             <artifactId>spring-security</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
         <!--引入activiti的springboot启动器 -->
         <dependency>
             <groupId>org.activiti</groupId>
@@ -64,6 +65,12 @@
                     <groupId>org.mybatis</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-mp</artifactId>
+            <version>4.1.0</version>
         </dependency>
     </dependencies>
 
